[tool.poetry]
name = "poetry-healthcare-diabetes"
version = "0.1.0"
description = ""
authors = ["adhityaprimandhika <adhityaprimandhika@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_healthcare_diabetes"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
plotly = "^5.16.1"
scikit-learn = "^1.3.0"
imblearn = "^0.0"
xgboost = "^1.7.6"
seaborn = "^0.12.2"
joblib = "^1.3.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
